--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <head>
   <title>Oversimplified.com</title>
+  <link rel="icon" type="image/x-icon" href="https://th.bing.com/th/id/R.4d4f6b04cbdc865628a3d0502d9edf32?rik=ykLAPIfNsBWVaA&pid=ImgRaw&r=0">
   <style>
     body { 
  background-image: url(https://wallpapercave.com/wp/MAmPaLt.jpg);
